--- a/app/blocks/filter-tags/filter-tags.scss
+++ b/app/blocks/filter-tags/filter-tags.scss
@@ -1,3 +1,25 @@
 .filter-tags {
   $b: &;
+
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  box-sizing: border-box;
+  // max-width: 300px;
+
+  // @include screen('xlg', max, 2) {
+  //   max-width: pxtovw(300, 1660);
+  // }
+
+  // @include screen('lg', max, 2) {
+  //   max-width: pxtovw(300, 1366);
+  // }
+
+  // @include screen('md', max, 2) {
+  //   max-width: pxtovw(300, 960);
+  // }
+
+  // @include screen('sm', max, 2) {
+  //   max-width: pxtovw(300, 375);
+  // }
 }
