--- a/app/blocks/form/form.pug
+++ b/app/blocks/form/form.pug
@@ -2,8 +2,8 @@ mixin form()
   +b.FORM.form&attributes(attributes)
     block
 
-mixin nd-form()
-  +b.FORM.nd-form&attributes(attributes)
+mixin nd-form(tag)
+  +b(tag || 'form').nd-form&attributes(attributes)
     block
 
 mixin form-section(tag)
