--- a/app/components/search-filter/nd-search-filter.scss
+++ b/app/components/search-filter/nd-search-filter.scss
@@ -38,6 +38,10 @@
     height: pxtovw(50, 375);
   }
 
+  .is-filter-popup-opened & {
+    z-index: 29;
+  }
+
   .is-search-map-active & {
     @include screen('md', max, 2) {
       position: relative;
