--- a/app/blocks/filter-button/filter-button.scss
+++ b/app/blocks/filter-button/filter-button.scss
@@ -47,6 +47,16 @@
     min-width: pxtovw(106, 375);
   }
 
+  &.is-choose {
+    border-color: $nd-color-basic;
+    box-shadow: inset 0 0 0 1px $nd-color-basic;
+  }
+
+  &_offer.is-choose {
+    border-color: $nd-color-border5;
+    box-shadow: none;
+  }
+
   .is-search-map-active & {
     background-color: $nd-color-basic-light;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, .25);
@@ -145,7 +155,7 @@
       background-color: $nd-color-meetingroom;
     }
 
-    &.is-types-po {
+    &.is-types-po::before {
       background-color: $nd-color-privateoffice;
     }
   }
