--- a/app/blocks/filter-popup/filter-popup.scss
+++ b/app/blocks/filter-popup/filter-popup.scss
@@ -1,3 +1,371 @@
 .filter-popup {
   $b: &;
+
+  display: flex;
+  width: 350px;
+  background-color: $nd-color-basic-light;
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, .03), 2px 2px 2px rgba(0, 0, 0, .04), 3px 3px 3px rgba(0, 0, 0, .02);
+  box-sizing: border-box;
+
+  @include screen('xlg', max, 2) {
+    width: pxtovw(350, 1660);
+    border-radius: pxtovw(3, 1660);
+  }
+
+  @include screen('lg', max, 2) {
+    width: pxtovw(350, 1366);
+    border-radius: pxtovw(3, 1366);
+  }
+
+  @include screen('md', max, 2) {
+    width: pxtovw(350, 960);
+    border-radius: pxtovw(3, 960);
+  }
+
+  @include screen('sm', max, 2) {
+    width: 100%;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  &__header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    display: none;
+    padding: 0 20px;
+    box-sizing: border-box;
+    background-color: $nd-color-basic-light;
+    z-index: 2;
+
+    @include screen('xlg', max, 2) {
+      height: pxtovw(60, 1660);
+      padding: 0 pxtovw(20, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      height: pxtovw(60, 1366);
+      padding: 0 pxtovw(20, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      height: pxtovw(60, 960);
+      padding: 0 pxtovw(20, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: pxtovw(60, 375);
+      padding: 0 pxtovw(20, 375);
+      border-bottom: 1px solid $nd-color-border5;
+    }
+  }
+
+  &__close {
+    position: absolute;
+    font-size: 0;
+    line-height: 0;
+    top: 0;
+    right: 0;
+    display: block;
+    cursor: pointer;
+    width: 56px;
+    height: 60px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: 18px;
+    background-image: $icon-cross;
+    z-index: 3;
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(56, 1366);
+      height: pxtovw(60, 1366);
+      background-size: pxtovw(18, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(56, 960);
+      height: pxtovw(60, 960);
+      background-size: pxtovw(18, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      left: 0;
+      width: pxtovw(56, 375);
+      height: pxtovw(60, 375);
+      background-size: pxtovw(18, 375);
+    }
+  }
+
+  &__title {
+    font-family: $font-stolzl;
+    font-size: 17px;
+    line-height: (20 / 17);
+    text-align: center;
+    font-weight: 400;
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(17, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(17, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(17, 375);
+    }
+  }
+
+  &__content {
+    position: relative;
+    display: block;
+    overflow: auto;
+    max-height: 350px;
+    box-sizing: border-box;
+    width: 100%;
+    scrollbar-color: $nd-color-basic $nd-color-bg;
+    scrollbar-width: thin;
+    -ms-overflow-style: none;
+    padding: 25px 20px 80px;
+    z-index: 1;
+
+    @include screen('xlg', max, 2) {
+      max-height: pxtovw(350, 1660);
+      padding: pxtovw(25, 1660) pxtovw(20, 1660) pxtovw(80, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      max-height: pxtovw(350, 1366);
+      padding: pxtovw(25, 1366) pxtovw(20, 1366) pxtovw(80, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      max-height: pxtovw(350, 960);
+      padding: pxtovw(25, 960) pxtovw(20, 960) pxtovw(80, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      max-height: 100%;
+      padding: pxtovw(60, 375) pxtovw(20, 375) pxtovw(80, 375);
+    }
+
+    &::-webkit-scrollbar-track {
+      width: 6px;
+      background-color: $nd-color-bg;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(6, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(6, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(6, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(6, 375);
+      }
+    }
+
+    &::-webkit-scrollbar {
+      width: 4px;
+      background-color: $nd-color-bg;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(4, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(4, 375);
+      }
+    }
+
+    &::-webkit-scrollbar-thumb {
+      width: 4px;
+      background-color: $nd-color-basic;
+
+      @include screen('xlg', max, 2) {
+        width: pxtovw(4, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(4, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(4, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(4, 375);
+      }
+    }
+  }
+
+  &__footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 20px;
+    z-index: 4;
+    background-color: $nd-color-basic-light;
+
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(20, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding: pxtovw(20, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: pxtovw(20, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(20, 375);
+      background-color: transparent;
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: flex-start;
+
+    @include screen('sm', max, 2) {
+      justify-content: space-between;
+    }
+  }
+
+  &__button {
+    flex: 1;
+
+    @include screen('sm', min, 2) {
+      display: none;
+    }
+
+    @include screen('sm', max, 2) {
+      width: 100%;
+    }
+
+    &:not(:last-child) {
+      margin-right: 20px;
+
+      @include screen('xlg', max, 2) {
+        margin-right: pxtovw(20, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-right: pxtovw(20, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-right: pxtovw(20, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__clear {
+    display: inline-block;
+    text-align: right;
+    font-size: 17px;
+    line-height: 1.2;
+    font-weight: 400;
+    cursor: pointer;
+
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(17, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      font-size: pxtovw(17, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      font-size: pxtovw(17, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      position: fixed;
+      font-size: pxtovw(15, 375);
+      z-index: 2;
+      right: pxtovw(20, 375);
+      top: pxtovw(21, 375);
+      transform: translate3d(0, 0, 0);
+    }
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__offers {
+    display: block;
+    width: 100%;
+
+    @include screen('sm', max, 2) {
+      display: flex;
+      height: 100%;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: center;
+      box-sizing: border-box;
+      padding-bottom: pxtovw(83, 375);
+    }
+  }
+
+  &__offer {
+    margin-top: auto;
+    width: 100%;
+
+    &:not(:first-child) {
+      margin-top: 18px;
+
+      @include screen('xlg', max, 2) {
+        margin-top: pxtovw(18, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        margin-top: pxtovw(18, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        margin-top: pxtovw(18, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        margin-top: pxtovw(18, 375);
+      }
+    }
+  }
+
+  &__form {
+    width: 100%;
+    overflow: hidden;
+  }
 }
