--- a/app/blocks/filter-tag/filter-tag.scss
+++ b/app/blocks/filter-tag/filter-tag.scss
@@ -1,3 +1,102 @@
 .filter-tag {
   $b: &;
+
+  position: relative;
+  font-size: 12px;
+  line-height: 1.25;
+  padding: 4px 13px;
+  border: 1px solid #aeb6b8;
+  border-radius: 20px;
+  box-sizing: border-box;
+  cursor: pointer;
+  overflow: hidden;
+  transition: border $ease-main;
+  flex: none;
+  letter-spacing: -.02em;
+  white-space: nowrap;
+
+  @include screen('xlg', max, 2) {
+    font-size: pxtovw(12, 1660);
+    padding: pxtovw(4, 1660) pxtovw(13, 1660);
+    border-radius: pxtovw(20, 1660);
+  }
+
+  @include screen('lg', max, 2) {
+    font-size: pxtovw(12, 1366);
+    padding: pxtovw(4, 1366) pxtovw(13, 1366);
+    border-radius: pxtovw(20, 1366);
+  }
+
+  @include screen('md', max, 2) {
+    font-size: pxtovw(12, 960);
+    padding: pxtovw(4, 960) pxtovw(13, 960);
+    border-radius: pxtovw(20, 960);
+  }
+
+  @include screen('sm', max, 2) {
+    font-size: pxtovw(12, 375);
+    padding: pxtovw(4, 375) pxtovw(13, 375);
+    border-radius: pxtovw(20, 375);
+  }
+
+  &:not(:last-child) {
+    margin-right: 8px;
+
+    @include screen('xlg', max, 2) {
+      margin-right: pxtovw(8, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      margin-right: pxtovw(8, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      margin-right: pxtovw(8, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      margin-right: pxtovw(8, 375);
+    }
+  }
+
+  &::before {
+    @include pseudo;
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: #16181c;
+    background-image: url("data:image/svg+xml,%3Csvg width='8' height='8' viewBox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.630859 0.63092L7.36903 7.36909' stroke='white' stroke-miterlimit='10' stroke-linecap='round'/%3E%3Cpath d='M0.630859 0.63092L7.36903 7.36909' stroke='white' stroke-miterlimit='10' stroke-linecap='round'/%3E%3Cpath d='M7.36903 0.63092L0.630859 7.36909' stroke='white' stroke-miterlimit='10' stroke-linecap='round'/%3E%3C/svg%3E ");
+    background-size: 8px;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    opacity: 0;
+    transition: opacity $ease-main;
+
+    @include screen('xlg', max, 2) {
+      background-size: pxtovw(8, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      background-size: pxtovw(8, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      background-size: pxtovw(8, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      background-size: pxtovw(8, 375);
+    }
+  }
+
+  &:hover {
+    border-color: #16181c;
+
+    &::before {
+      opacity: 1;
+    }
+  }
 }
