--- a/app/components/filter-menu/filter-menu.scss
+++ b/app/components/filter-menu/filter-menu.scss
@@ -32,18 +32,18 @@
 
     &_location {
       &:not(:last-child) {
-        margin-right: 10px;
+        margin-right: 15px;
 
         @include screen('xlg', max, 2) {
-          margin-right: pxtovw(10, 1660);
+          margin-right: pxtovw(15, 1660);
         }
 
         @include screen('lg', max, 2) {
-          margin-right: pxtovw(10, 1366);
+          margin-right: pxtovw(15, 1366);
         }
 
         @include screen('md', max, 2) {
-          margin-right: pxtovw(10, 960);
+          margin-right: pxtovw(15, 960);
         }
 
         @include screen('sm', max, 2) {
@@ -54,18 +54,18 @@
 
     &_tags {
       &:not(:last-child) {
-        margin-right: 10px;
+        margin-right: 44px;
 
         @include screen('xlg', max, 2) {
-          margin-right: pxtovw(10, 1660);
+          margin-right: pxtovw(44, 1660);
         }
 
         @include screen('lg', max, 2) {
-          margin-right: pxtovw(10, 1366);
+          margin-right: pxtovw(44, 1366);
         }
 
         @include screen('md', max, 2) {
-          margin-right: pxtovw(10, 960);
+          margin-right: pxtovw(44, 960);
         }
 
         @include screen('sm', max, 2) {
@@ -77,10 +77,47 @@
 
   &__popup {
     position: absolute;
-    top: 100%;
+    top: calc(100% + 10px);
     left: 50%;
     transform: translate3d(-50%, 0, 0);
     opacity: 0;
     pointer-events: none;
+    transition: opacity $ease-main, transform $ease-main;
+    z-index: 3;
+
+    @include screen('xlg', max, 2) {
+      top: calc(100% + ((1000 / 1660) * 1vw));
+    }
+
+    @include screen('lg', max, 2) {
+      top: calc(100% + ((1000 / 1366) * 1vw));
+    }
+
+    @include screen('md', max, 2) {
+      top: calc(100% + ((1000 / 960) * 1vw));
+    }
+
+    @include screen('sm', max, 2) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transform: translate3d(100%, 0, 0);
+    }
+
+    #{$b}__item_location & {
+      left: 0;
+      transform: translate3d(0, 0, 0);
+    }
+
+    .filter-button.is-active ~ & {
+      opacity: 1;
+      pointer-events: auto;
+
+      @include screen('sm', max, 2) {
+        transform: translate3d(0, 0, 0);
+      }
+    }
   }
 }
