slider for maps and tags, marker

--- a/app/blocks/filter-tag/filter-tag.scss
+++ b/app/blocks/filter-tag/filter-tag.scss
@@ -92,6 +92,10 @@
     }
   }
 
+  .is-search-map-active & {
+    background-color: $nd-color-basic-light;
+  }
+
   &:hover {
     border-color: #16181c;
 
