--- a/app/blocks/filter-tags/filter-tags.pug
+++ b/app/blocks/filter-tags/filter-tags.pug
@@ -1,3 +1,4 @@
 mixin filter-tags()
-  +b.filter-tags&attributes(attributes)
-    block
+  +b.js-filter-tag-slider.filter-tags__&attributes(attributes)
+    +e.wrapper.swiper-wrapper(data-nd-filter-tags)
+      block
