--- a/app/blocks/filter-tags/filter-tags.scss
+++ b/app/blocks/filter-tags/filter-tags.scss
@@ -5,21 +5,30 @@
   justify-content: flex-start;
   align-items: center;
   box-sizing: border-box;
-  // max-width: 300px;
+  width: auto;
+  max-width: 350px;
+  overflow: visible;
+  height: 100%;
 
-  // @include screen('xlg', max, 2) {
-  //   max-width: pxtovw(300, 1660);
-  // }
+  @include screen('xlg', max, 2) {
+    max-width: pxtovw(350, 1660);
+  }
 
-  // @include screen('lg', max, 2) {
-  //   max-width: pxtovw(300, 1366);
-  // }
+  @include screen('lg', max, 2) {
+    max-width: pxtovw(350, 1366);
+  }
 
-  // @include screen('md', max, 2) {
-  //   max-width: pxtovw(300, 960);
-  // }
+  @include screen('md', max, 2) {
+    max-width: pxtovw(350, 960);
+  }
 
-  // @include screen('sm', max, 2) {
-  //   max-width: pxtovw(300, 375);
-  // }
+  @include screen('sm', max, 2) {
+    max-width: pxtovw(350, 375);
+  }
+
+  &__wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
