--- a/app/blocks/slider/nd-slider.scss
+++ b/app/blocks/slider/nd-slider.scss
@@ -146,5 +146,17 @@
         margin-right: pxtovw(37, 375);
       }
     }
+
+    &_map-card {
+      @include screen('md', max, 2) {
+        width: pxtovw(280, 960);
+        margin-right: pxtovw(20, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(280, 375);
+        margin-right: pxtovw(17, 375);
+      }
+    }
   }
 }
