--- a/app/components/search-map/nd-search-map-button.scss
+++ b/app/components/search-map/nd-search-map-button.scss
@@ -65,4 +65,10 @@
     width: pxtovw(50, 375);
     height: pxtovw(50, 375);
   }
+
+  .is-filter-popup-opened & {
+    @include screen('sm', max, 2) {
+      visibility: hidden;
+    }
+  }
 }
