--- a/app/components/user-menu-panel/user-menu-panel.scss
+++ b/app/components/user-menu-panel/user-menu-panel.scss
@@ -95,6 +95,12 @@
         }
       }
     }
+
+    .is-filter-popup-opened & {
+      @include screen('sm', max, 2) {
+        visibility: hidden;
+      }
+    }
   }
 
   .nd-header.is-login ~ & {
