--- a/app/blocks/offer-table/offer-table.scss
+++ b/app/blocks/offer-table/offer-table.scss
@@ -29,6 +29,10 @@
     &:last-child {
       text-align: right;
     }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(6, 375) 0;
+    }
   }
 
   &__offer {
@@ -105,6 +109,12 @@
 
     @include screen('sm', max, 2) {
       font-size: pxtovw(11, 375);
+    }
+
+    #{$b}_map & {
+      @include screen('sm', max, 2) {
+        font-size: pxtovw(10, 375);
+      }
     }
   }
 
