--- a/app/blocks/filter-popup/filter-popup.scss
+++ b/app/blocks/filter-popup/filter-popup.scss
@@ -367,5 +367,22 @@
   &__form {
     width: 100%;
     overflow: hidden;
+    padding-bottom: 1px;
+
+    @include screen('xlg', max, 2) {
+      padding-bottom: pxtovw(1, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding-bottom: pxtovw(1, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding-bottom: pxtovw(1, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding-bottom: pxtovw(1, 375);
+    }
   }
 }
