--- a/app/blocks/filter-tag/filter-tag.scss
+++ b/app/blocks/filter-tag/filter-tag.scss
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   cursor: pointer;
   overflow: hidden;
-  transition: border $ease-main;
+  transition: border $ease-main, background $ease-main, color $ease-main;
   flex: none;
   letter-spacing: -.02em;
   white-space: nowrap;
@@ -64,10 +64,9 @@
 
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    bottom: 0;
+    right: 0;
     z-index: 2;
-    background-color: #16181c;
     background-image: url("data:image/svg+xml,%3Csvg width='8' height='8' viewBox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0.630859 0.63092L7.36903 7.36909' stroke='white' stroke-miterlimit='10' stroke-linecap='round'/%3E%3Cpath d='M0.630859 0.63092L7.36903 7.36909' stroke='white' stroke-miterlimit='10' stroke-linecap='round'/%3E%3Cpath d='M7.36903 0.63092L0.630859 7.36909' stroke='white' stroke-miterlimit='10' stroke-linecap='round'/%3E%3C/svg%3E ");
     background-size: 8px;
     background-repeat: no-repeat;
@@ -97,7 +96,9 @@
   }
 
   &:hover {
-    border-color: #16181c;
+    color: #16181c;
+    border-color: currentColor;
+    background-color: currentColor;
 
     &::before {
       opacity: 1;
